# lists-ChristianRojasRojas

./: CMakeLists.txt  main.cpp
structures/: queue.h  stack.h
structures/lists/: circular.h  forward.h  linked.h  list.h  node.h
structures/lists/iterators/: bidirectional_iterator.h  forward_iterator.h
